# kamos.exe

./: CMakeLists.txt  README.md  build.bat  ncrt_github_readme.md
cpps/: main.cpp  utils.cpp
headers/: modules.h  utils.h
sources/: main.cpp  modules.cpp
